--- a/templates/home.html
+++ b/templates/home.html
@@ -3,16 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload Pet Image</title>
+    <title>Selecione a imagem do pet e busque</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+        }
+        .container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        form {
+            text-align: center;
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        input[type="file"] {
+            display: none;
+        }
+        label.upload-btn {
+            display: inline-block;
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-bottom: 10px;
+        }
+        button[type="submit"] {
+            background-color: #4caf50;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+        .logo {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .logo img {
+            width: 100px; /* Adjust size as needed */
+            height: auto;
+        }
+    </style>
 </head>
 <body>
-    <h1>Upload Pet Image</h1>
-    <form action="/home" method="POST" enctype="multipart/form-data">
-        <input type="file" name="file" accept="image/*" required>
-        <button type="submit">Submit</button>
-    </form>
-    {% if error %}
-    <p>{{ error }}</p>
-    {% endif %}
+    <div class="container">
+        <div class="logo">
+            <img src="/static/logo.jpg" alt="Logo">
+        </div>
+        <h1>Procurar Pet</h1>
+        <form action="/home" method="POST" enctype="multipart/form-data">
+            <label for="file" class="upload-btn">Escolher imagem do pet</label>
+            <input type="file" id="file" name="file" accept="image/*" onchange="displayFileName(this)" required>
+            <span id="file-name"></span>
+            <button type="submit">Buscar</button>
+        </form>
+        {% if error %}
+        <p>{{ error }}</p>
+        {% endif %}
+    </div>
+
+    <script>
+        function displayFileName(input) {
+            const fileName = input.files[0].name;
+            document.getElementById('file-name').textContent = fileName;
+        }
+    </script>
 </body>
 </html>
